<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/playPause"
            app:icon="@drawable/ic_play"
            android:text="@string/home_playpause"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/ic_previous"
            android:id="@+id/previous"
            android:text="@string/home_previous"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/ic_next"
            android:id="@+id/next"
            android:text="@string/home_next"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/ic_volume_up"
            android:id="@+id/volumeUp"
            android:text="@string/home_volumeup"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/ic_volume_down"
            android:id="@+id/volumeDown"
            android:text="@string/home_volumedown"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/ic_mute"
            android:id="@+id/mute"
            android:text="@string/home_mute"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/ic_fullscreen"
            android:id="@+id/fullscreen"
            android:text="@string/home_fullscreen"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/ic_restart"
            android:id="@+id/refresh"
            android:text="@string/home_refresh"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            app:icon="@drawable/ic_close"
            android:id="@+id/close"
            android:text="@string/home_close"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>