<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="vertical"
        android:layout_weight="1" >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/keyboard_text"
            app:endIconMode="clear_text"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtKeyboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <com.google.android.material.button.MaterialButton
                app:icon="@drawable/ic_netflix"
                android:id="@+id/netflix"
                android:text="@string/keyboard_netflix"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                app:icon="@drawable/ic_prime"
                android:id="@+id/prime"
                android:text="@string/keyboard_prime"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <com.google.android.material.button.MaterialButton
                app:icon="@drawable/ic_hbo"
                android:id="@+id/hbo"
                android:text="@string/keyboard_hbo"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                app:icon="@drawable/ic_disney"
                android:id="@+id/disney"
                android:text="@string/keyboard_disney"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <com.google.android.material.button.MaterialButton
                app:icon="@drawable/ic_apple"
                android:id="@+id/apple"
                android:text="@string/keyboard_apple"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                app:icon="@drawable/ic_star"
                android:id="@+id/star"
                android:text="@string/keyboard_star"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>